--- a/styles.css
+++ b/styles.css
@@ -20,23 +20,25 @@ body {
     font-family: "Roboto", Arial, Helvetica, sans-serif;
     margin-bottom: 100px;
 }
-  
-#body {
-    flex-direction: column;
-}
-  
+
 body,
 header,
 h1 {
     margin: 0;
 }
-  
+
 body,
 header {
     padding: 0;
 }
-
+  
+#body {
+    flex-direction: column;
+}
+  
+#body,
 header,
+#calculator,
 footer {
     align-items: center;
     display: flex;
@@ -45,10 +47,24 @@ footer {
 
 h1 {
     font-size: 72px;
-    padding: 16px;
+    padding: 32px;
     text-shadow: 0px 0px 6px rgba(0, 0, 0, 1), 0px 0px 12px rgba(0, 0, 0, 1),
     0px 0px 18px rgba(0, 0, 0, 1), 0px 0px 10px rgba(0, 0, 0, 1),
     0px 0px 24px rgba(0, 0, 0, 1);
+}
+
+#calculator {
+    background: radial-gradient(circle, rgba(120, 120, 120, 1) 0%, rgba(0, 0, 0, 1) 125%);
+    border-color: rgba(255, 255, 255, 0.05);
+    border-radius: 20px;
+    border-style: solid;
+    border-width: 3px;
+    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 1),
+    0px 0px 20px 20px rgba(0, 0, 0, 0.5);
+    height: 900px;
+    margin-bottom: 48px;
+    margin-top: 48px;
+    width: 700px;
 }
 
 footer {
