--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ header {
 }
   
 #body,
+#buttons,
 header,
 #calculator,
 footer {
@@ -63,8 +64,33 @@ h1 {
     border-width: 3px;
     box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 1),
     0px 0px 20px 20px rgba(0, 0, 0, 0.5);
+    flex-direction: column;
+    gap: 32px;
     height: 750px;
+    padding-left: 16px;
+    padding-right: 16px;
     width: 550px;
+}
+
+#display {
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 20px;
+    border-color: rgba(255, 255, 255, 1);
+    border-radius: 20px;
+    border-style: solid;
+    border-width: 3px;
+    height: 125px;
+    width: 500px;
+}
+
+#buttons {
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+button {
+    height: 100px;
+    width: 100px;
 }
 
 footer {
