--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,6 @@ h1 {
     border-image: linear-gradient(to top, rgb(0, 0, 0)transparent) 1;
     border-radius: 20px;
     border-style: solid;
-    border-width: 2px;
     box-shadow: 
     0px 10px 20px rgba(0, 0, 0, 0.5),
     0px 20px 40px rgba(0, 0, 0, 0.3),
@@ -92,7 +91,7 @@ button {
     font-size: 88px;
     height: 124px;
     justify-content: flex-end;
-    padding: 8px;
+    padding: 16px;
     width: 524px;
 }
 
@@ -109,11 +108,29 @@ button {
 }
 
 button {
+    background-color: rgba(75, 75, 75, 1);
+    border-color: rgba(128, 128, 128, 0.3);
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 2px;
+    box-shadow: 
+    inset 0px 0px 2px rgba(255, 255, 255, 0.2),
+    inset 0px 0px 2px rgba(0, 0, 0, 0.4);
     cursor: pointer;
     font-size: 25px;
     font-weight: bolder;
     height: 100px;
+    position: relative;
     width: 100px;
+    z-index: 2;
+}
+
+button:active {
+    box-shadow:
+    inset 0px 0px 2px rgba(0, 0, 0, 0.5),
+    inset 0px 0px 2px rgba(255, 255, 255, 0.5),
+    inset 0px 0px 2px rgba(0, 0, 0, 0.5);
+    transform: translateY(1px);
 }
 
 footer {
