--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,8 @@ button {
 }
 
 #display,
-button {
+.digit-buttons,
+.miscellaneous-buttons {
     background: radial-gradient(circle, rgb(25, 25, 25) 0%, rgba(0, 0, 0, 1) 125%);
     border-color: rgba(0, 0, 0, 0.5);
     text-align: center;
@@ -108,7 +109,6 @@ button {
 }
 
 button {
-    background-color: rgba(75, 75, 75, 1);
     border-color: rgba(128, 128, 128, 0.3);
     border-radius: 10px;
     border-style: solid;
@@ -121,6 +121,7 @@ button {
     font-weight: bolder;
     height: 100px;
     position: relative;
+    text-shadow: 0px 0px 3px rgba(255, 255, 255, 1);
     width: 100px;
     z-index: 2;
 }
@@ -133,15 +134,59 @@ button:active {
     transform: translateY(1px);
 }
 
-.number-buttons,
-.modifier-buttons,
-.operator-buttons {
+.digit-buttons,
+.function-buttons {
     font-size: 72px;
 }
 
-.miscellaneous-buttons {
+#answer-button,
+.rescind-buttons {
     font-size: 38px;
 }
+
+.operator-buttons,
+#equals-button {
+    font-size: 90px;
+}
+
+.operator-buttons {
+    background: radial-gradient(circle, rgba(140, 140, 255, 1) 0%, rgba(70, 0, 255, 1) 125%);
+}
+
+.operator-buttons,
+.rescind-buttons,
+.answer-buttons,
+.modifier-buttons,
+.function-buttons {
+    color: rgba(0, 0, 0, 1);
+    text-shadow: 0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 2px rgba(0, 0, 0, 1), 0px 0px 2px rgba(0, 0, 0, 1);
+}
+
+.modifier-buttons {
+    font-size: 62px;
+}
+
+#decimal-point-button {
+    font-size: 86px;
+}
+
+.modifier-buttons {
+    background: radial-gradient(circle, rgb(255, 120, 120) 0%, rgba(255, 90, 90, 1) 125%);
+}
+
+.answer-buttons {
+    background: radial-gradient(circle, rgba(120, 120, 255, 1) 0%, rgb(90, 90, 255) 125%);
+}
+
+.rescind-buttons {
+    background: radial-gradient(circle, rgb(255, 200, 0) 0%, rgb(255, 160, 0) 125%);
+}
+
+.function-buttons {
+    background: radial-gradient(circle, rgb(200, 255, 200) 0%, rgb(150, 255, 150) 125%);
+}
+
+
 
 footer {
     bottom: 0;
