--- a/styles.css
+++ b/styles.css
@@ -134,19 +134,36 @@ button:active {
     transform: translateY(1px);
 }
 
-.digit-buttons,
 .function-buttons {
+    background: radial-gradient(circle, rgb(200, 255, 200) 0%, rgb(150, 255, 150) 125%);
+}
+
+.function-buttons,
+.miscellaneous-buttons,
+.rescind-buttons,
+.operator-buttons,
+.modifier-buttons,
+.answer-buttons {
+    color: rgba(0, 0, 0, 1);
+    text-shadow: 0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 2px rgba(0, 0, 0, 1), 0px 0px 2px rgba(0, 0, 0, 1);
+}
+
+.function-buttons,
+.digit-buttons {
     font-size: 72px;
 }
 
-#answer-button,
-.rescind-buttons {
-    font-size: 38px;
+.miscellaneous-buttons {
+    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(120, 120, 120, 1) 125%);
 }
 
-.operator-buttons,
-#equals-button {
-    font-size: 90px;
+.rescind-buttons {
+    background: radial-gradient(circle, rgba(255, 200, 0, 1) 0%, rgba(255, 160, 0, 1) 125%);
+}
+
+.rescind-buttons,
+#answer-button {
+    font-size: 42px;
 }
 
 .operator-buttons {
@@ -154,39 +171,19 @@ button:active {
 }
 
 .operator-buttons,
-.rescind-buttons,
-.answer-buttons,
-.modifier-buttons,
-.function-buttons {
-    color: rgba(0, 0, 0, 1);
-    text-shadow: 0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 2px rgba(0, 0, 0, 1), 0px 0px 2px rgba(0, 0, 0, 1);
-}
-
-.modifier-buttons {
-    font-size: 62px;
-}
-
+#equals-button,
 #decimal-point-button {
-    font-size: 86px;
+    font-size: 90px;
 }
 
 .modifier-buttons {
     background: radial-gradient(circle, rgb(255, 120, 120) 0%, rgba(255, 90, 90, 1) 125%);
+    font-size: 62px;
 }
 
 .answer-buttons {
     background: radial-gradient(circle, rgba(120, 120, 255, 1) 0%, rgb(90, 90, 255) 125%);
 }
-
-.rescind-buttons {
-    background: radial-gradient(circle, rgb(255, 200, 0) 0%, rgb(255, 160, 0) 125%);
-}
-
-.function-buttons {
-    background: radial-gradient(circle, rgb(200, 255, 200) 0%, rgb(150, 255, 150) 125%);
-}
-
-
 
 footer {
     bottom: 0;
