--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,6 @@ button {
 body {
     background: radial-gradient(circle, rgba(50, 50, 50, 1), rgba(0, 0, 0, 1));
     flex-direction: column;
-    font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
 body,
@@ -31,6 +30,11 @@ h1 {
 body,
 header {
     padding: 0;
+}
+
+body,
+button {
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
  
 #body,
@@ -58,7 +62,7 @@ h1 {
     0px 0px 24px rgba(0, 0, 0, 1);
 }
 
-#calculator {
+.calculator {
     background: linear-gradient(160deg, rgba(50, 50, 50, 1) 0%, rgba(0, 0, 0, 1) 125%);
     border-color: rgba(255, 255, 255, 0.02);
     border-image: linear-gradient(to top, rgba(0, 0, 0, 1)transparent) 1;
@@ -75,6 +79,10 @@ h1 {
     padding-left: 24px;
     padding-right: 24px;
     width: 550px;
+}
+  
+.calculator.light {
+    background: linear-gradient(160deg, rgba(200, 200, 200, 1) 0%, rgba(150, 150, 150, 1) 125%);
 }
 
 #calculator,
@@ -94,6 +102,21 @@ button {
     justify-content: flex-end;
     padding: 16px;
     width: 524px;
+    border-color: rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 1);
+    font-size: 88px;
+    height: 124px;
+    justify-content: flex-end;
+    overflow: hidden;
+    padding: 16px;
+    text-align: right;
+    width: 524px;
+    white-space: nowrap;
+}
+
+#display,
+button {
+    text-shadow: 0px 0px 3px rgba(255, 255, 255, 1);
 }
 
 #display,
@@ -123,7 +146,6 @@ button {
     font-weight: bolder;
     height: 100px;
     position: relative;
-    text-shadow: 0px 0px 3px rgba(255, 255, 255, 1);
     width: 100px;
     z-index: 2;
 }
@@ -156,8 +178,19 @@ button:active {
 }
 
 .miscellaneous-buttons {
-    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(60, 60, 60, 1) 125%);
     font-size: 20px;
+}
+
+#colour-button {
+    color: rgba(255, 255, 255, 1);
+}
+
+#power-button.on {
+    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(0, 255, 0, 1) 125%);
+}
+
+#power-button.off {
+    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(255, 0, 0, 1) 125%);
 }
 
 .rescind-buttons {
