--- a/styles.css
+++ b/styles.css
@@ -119,48 +119,52 @@ button {
     text-shadow: 0px 0px 3px rgba(255, 255, 255, 1);
 }
 
-
-
-
-
-  
-  .dark-theme-colour-button {
+.dark-theme-colour-button {
     background-color: #000;
     color: #fff;
-  }
+}
 
-  .dark-theme-colour-button {
+.dark-theme-colour-button {
     background-color: #000;
     color: #fff;
-  }
+}
   
-  .light-theme-colour-button {
+.light-theme-colour-button {
     background-color: #fff;
     color: #000;
-  }
+}
 
-  .dark-theme-button {
+.dark-theme-button {
     background-color: #000;
     color: #fff;
-  }
+}
   
-  .light-theme-button {
+.light-theme-button {
     background-color: #fff;
     color: #000;
-  }
+}
 
-  .dark-theme-color-button {
+.dark-theme-color-button {
     color: #fff;
-  }
+}
   
-  .light-theme-color-button {
+.light-theme-color-button {
     color: #000;
-  }
-  
-  
+}
+
+.light-display {
+    background-color: #f0f0f0;
+    color: #333;
+}
+
+.dark-display {
+    background-color: #333;
+    color: #f0f0f0;
+}
+
 
 #display {
-    background: radial-gradient(circle, rgba(25, 25, 25, 1) 0%, rgba(0, 0, 0, 1) 125%);
+
     border-color: rgba(0, 0, 0, 0.5);
     text-align: center;
 }
