--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 html {
-    color: rgba(255, 255, 255, 1);
     scroll-behavior: smooth;
 }
   
@@ -10,6 +9,11 @@ main {
     width: 100%;
 }
   
+html,
+.dark-mode {
+    color: rgba(255, 255, 255, 1);
+}
+
 body,
 #calculator {
     flex-direction: column;
@@ -31,11 +35,7 @@ button {
     font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
-body,
-#calculator,
-#display,
-.miscellaneous-buttons,
-.digit-buttons {
+body {
     background-image: radial-gradient(circle at center, rgba(50, 50, 50, 1), rgba(0, 0, 0, 1));
     background-position: center;
     background-repeat: no-repeat;
@@ -63,21 +63,12 @@ h1,
 
 h1,
 #display,
-.miscellaneous-buttons,
-.digit-buttons {
-    color: rgba(255, 255, 255, 1);
-}
-
-h1,
-#display,
 .function-buttons,
 .digit-buttons {
     font-size: 72px;
 }
 
-h1,
-#display,
-.digit-buttons {
+h1 {
     text-shadow: 0px 0px 3px rgba(255, 255, 255, 1),
     0px 0px 3px rgba(255, 255, 255, 1),
     0px 0px 3px rgba(255, 255, 255, 1),
@@ -111,9 +102,10 @@ h1,
 #display,
 .miscellaneous-buttons,
 .digit-buttons {
-    background: radial-gradient(circle, rgba(50, 50, 50, 1) 0%, rgba(0, 0, 0, 1) 125%);
+    background-position: center;
+    background-size: cover;
 }
-  
+
 #calculator,
 #display,
 button {
@@ -122,9 +114,42 @@ button {
     border-width: 3px;
 }
 
+.dark-mode {
+    background-image: radial-gradient(circle at center, rgba(50, 50, 50, 1), rgba(0, 0, 0, 1));
+    text-shadow:
+    0px 0px 3px rgba(255, 255, 255, 1),
+    0px 0px 3px rgba(255, 255, 255, 1),
+    0px 0px 3px rgba(255, 255, 255, 1),
+    0px 0px 3px rgba(255, 255, 255, 1),
+    0px 0px 5px rgba(0, 0, 0, 1),
+    0px 0px 5px rgba(0, 0, 0, 1),
+    0px 0px 5px rgba(0, 0, 0, 1),
+    0px 0px 5px rgba(0, 0, 0, 1),
+    0px 0px 5px rgba(0, 0, 0, 1),
+    0px 0px 5px rgba(0, 0, 0, 1),
+    0px 0px 5px rgba(0, 0, 0, 1),
+    0px 0px 5px rgba(0, 0, 0, 1);
+}
+  
+.light-mode {
+    background-image: radial-gradient(circle at center, rgba(255, 255, 255, 1), rgba(200, 200, 200, 1));
+    color: rgb(50, 50, 50, 1);
+    text-shadow:
+    0px 0px 3px rgba(50, 50, 50, 1),
+    0px 0px 3px rgba(50, 50, 50, 1),
+    0px 0px 3px rgba(50, 50, 50, 1),
+    0px 0px 3px rgba(50, 50, 50, 1),
+    0px 0px 3px rgba(255, 255, 255, 1),
+    0px 0px 3px rgba(255, 255, 255, 1),
+    0px 0px 3px rgba(255, 255, 255, 1),
+    0px 0px 3px rgba(255, 255, 255, 1),
+    0px 0px 3px rgba(255, 255, 255, 1),
+    0px 0px 3px rgba(255, 255, 255, 1),
+    0px 0px 3px rgba(255, 255, 255, 1),
+    0px 0px 3px rgba(255, 255, 255, 1);
+}
+
 #display {
-    border-color: rgba(0, 0, 0, 1);
-    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 1);
     font-size: 88px;
     height: 124px;
     justify-content: flex-end;
@@ -132,6 +157,16 @@ button {
     text-align: right;
     white-space: nowrap;
     width: 512px;
+}
+
+.dark-mode #display {
+    border-color: rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 1);
+}
+
+.light-mode #display {
+    border-color: rgba(128, 128, 128, 0.5);
+    box-shadow: inset 0px 0px 10px rgba(128, 128, 128, 1);
 }
 
 #buttons {
@@ -187,8 +222,6 @@ button:active {
 
 .miscellaneous-buttons {
     font-size: 22px;
-    text-shadow: 0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 3px rgba(255, 255, 255, 1);
 }
 
 .rescind-buttons {
@@ -211,12 +244,12 @@ button:active {
 }
 
 .modifier-buttons {
-    background: radial-gradient(circle, rgb(255, 120, 120) 0%, rgba(255, 90, 90, 1) 125%);
+    background: radial-gradient(circle, rgba(255, 120, 120, 1) 0%, rgba(255, 90, 90, 1) 125%);
     font-size: 62px;
 }
 
 .answer-buttons {
-    background: radial-gradient(circle, rgba(120, 120, 255, 1) 0%, rgb(90, 90, 255) 125%);
+    background: radial-gradient(circle, rgba(120, 120, 255, 1) 0%, rgba(90, 90, 255, 1) 125%);
 }
 
 footer {
