--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ h1 {
 
 #calculator,
 #display,
-.miscellaneous-buttons,
+#colour-button,
 .digit-buttons {
     background-position: center;
     background-size: cover;
@@ -138,15 +138,7 @@ button {
     0px 0px 3px rgba(50, 50, 50, 1),
     0px 0px 3px rgba(50, 50, 50, 1),
     0px 0px 3px rgba(50, 50, 50, 1),
-    0px 0px 3px rgba(50, 50, 50, 1),
-    0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 3px rgba(255, 255, 255, 1);
+    0px 0px 3px rgba(50, 50, 50, 1);
 }
 
 #display {
@@ -209,6 +201,7 @@ button:active {
 }
 
 .function-buttons,
+#power-button,
 .rescind-buttons,
 .operator-buttons,
 .modifier-buttons,
@@ -217,20 +210,32 @@ button:active {
     text-shadow: 0px 0px 3px rgba(0, 0, 0, 1),
     0px 0px 3px rgba(0, 0, 0, 1),
     0px 0px 3px rgba(0, 0, 0, 1),
+    0px 0px 3px rgba(0, 0, 0, 1),
+    0px 0px 3px rgba(0, 0, 0, 1),
+    0px 0px 3px rgba(0, 0, 0, 1),
     0px 0px 3px rgba(0, 0, 0, 1);
 }
 
-.miscellaneous-buttons {
-    font-size: 22px;
+#colour-button {
+    font-size: 30px;
+}
+
+#power-button,
+.rescind-buttons,
+#answer-button {
+    font-size: 42px;
+}
+
+.power-button-on {
+    background-image: radial-gradient(circle at center, rgba(0, 255, 0, 1), rgba(0, 16, 0, 1));
+}
+
+.power-button-off {
+    background-image: radial-gradient(circle at center, rgba(255, 0, 0, 1), rgba(16, 0, 0, 1));
 }
 
 .rescind-buttons {
     background: radial-gradient(circle, rgba(255, 200, 0, 1) 0%, rgba(255, 160, 0, 1) 125%);
-}
-
-.rescind-buttons,
-#answer-button {
-    font-size: 42px;
 }
 
 .operator-buttons {
