--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,52 @@
 html {
-    scroll-behavior: smooth;
+  overflow: hidden;
+  scroll-behavior: smooth;
 }
-  
+
 html,
 body,
 main {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
-  
+
 html,
 .dark-mode {
-    color: rgba(255, 255, 255, 1);
+  color: rgba(255, 255, 255, 1);
 }
 
 body,
 #calculator {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 body,
 header,
 h1 {
-    margin: 0;
+  margin: 0;
 }
 
 body,
 header {
-    padding: 0;
+  padding: 0;
 }
 
 body,
 button {
-    font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
 body {
-    background-image: radial-gradient(circle at center, rgba(50, 50, 50, 1), rgba(0, 0, 0, 1));
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: radial-gradient(
+    circle at center,
+    rgba(50, 50, 50, 1),
+    rgba(0, 0, 0, 1)
+  );
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
- 
+
 #body,
 header,
 #calculator,
@@ -49,155 +54,145 @@ header,
 #buttons,
 button,
 footer {
-    align-items: center;
-    display: flex;
-    justify-content: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 header,
 h1,
 #calculator,
 #display {
-    padding: 16px;
+  padding: 16px;
 }
 
 h1,
 #display,
 .function-buttons,
 .digit-buttons {
-    font-size: 72px;
+  font-size: 72px;
 }
 
 h1 {
-    text-shadow: 0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 5px rgba(0, 0, 0, 1),
-    0px 0px 5px rgba(0, 0, 0, 1),
-    0px 0px 5px rgba(0, 0, 0, 1),
-    0px 0px 5px rgba(0, 0, 0, 1),
-    0px 0px 5px rgba(0, 0, 0, 1),
-    0px 0px 5px rgba(0, 0, 0, 1),
-    0px 0px 5px rgba(0, 0, 0, 1),
+  text-shadow: 0px 0px 3px rgba(255, 255, 255, 1),
+    0px 0px 3px rgba(255, 255, 255, 1), 0px 0px 3px rgba(255, 255, 255, 1),
+    0px 0px 3px rgba(255, 255, 255, 1), 0px 0px 5px rgba(0, 0, 0, 1),
+    0px 0px 5px rgba(0, 0, 0, 1), 0px 0px 5px rgba(0, 0, 0, 1),
+    0px 0px 5px rgba(0, 0, 0, 1), 0px 0px 5px rgba(0, 0, 0, 1),
+    0px 0px 5px rgba(0, 0, 0, 1), 0px 0px 5px rgba(0, 0, 0, 1),
     0px 0px 5px rgba(0, 0, 0, 1);
 }
 
 #calculator {
-    border-color: rgba(255, 255, 255, 0.05);
-    border-image: linear-gradient(to top, rgba(0, 0, 0, 1)transparent) 1;
-    box-shadow: 
-    0px 0px 10px rgba(0, 0, 0, 1),
-    0px 0px 10px rgba(0, 0, 0, 1),
+  border-color: rgba(255, 255, 255, 0.05);
+  border-image: linear-gradient(to top, rgba(0, 0, 0, 1) transparent) 1;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 1), 0px 0px 10px rgba(0, 0, 0, 1),
     inset 0px -2px 4px rgba(0, 0, 0, 0.1),
     inset 0px 2px 4px rgba(255, 255, 255, 0.1);
-    gap: 32px;
-    height: 750px;
-    padding-left: 24px;
-    padding-right: 24px;
-    width: 550px;
+  gap: 32px;
+  height: 750px;
+  padding-left: 24px;
+  padding-right: 24px;
+  width: 550px;
 }
 
 #calculator,
 #display,
 #colour-button,
 .digit-buttons {
-    background-position: center;
-    background-size: cover;
+  background-position: center;
+  background-size: cover;
 }
 
 #calculator,
 #display,
 button {
-    border-radius: 20px;
-    border-style: solid;
-    border-width: 3px;
+  border-radius: 20px;
+  border-style: solid;
+  border-width: 3px;
 }
 
 .dark-mode {
-    background-image: radial-gradient(circle at center, rgba(50, 50, 50, 1), rgba(0, 0, 0, 1));
-    text-shadow:
-    0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 5px rgba(0, 0, 0, 1),
-    0px 0px 5px rgba(0, 0, 0, 1),
-    0px 0px 5px rgba(0, 0, 0, 1),
-    0px 0px 5px rgba(0, 0, 0, 1),
-    0px 0px 5px rgba(0, 0, 0, 1),
-    0px 0px 5px rgba(0, 0, 0, 1),
-    0px 0px 5px rgba(0, 0, 0, 1),
+  background-image: radial-gradient(
+    circle at center,
+    rgba(50, 50, 50, 1),
+    rgba(0, 0, 0, 1)
+  );
+  text-shadow: 0px 0px 3px rgba(255, 255, 255, 1),
+    0px 0px 3px rgba(255, 255, 255, 1), 0px 0px 3px rgba(255, 255, 255, 1),
+    0px 0px 3px rgba(255, 255, 255, 1), 0px 0px 5px rgba(0, 0, 0, 1),
+    0px 0px 5px rgba(0, 0, 0, 1), 0px 0px 5px rgba(0, 0, 0, 1),
+    0px 0px 5px rgba(0, 0, 0, 1), 0px 0px 5px rgba(0, 0, 0, 1),
+    0px 0px 5px rgba(0, 0, 0, 1), 0px 0px 5px rgba(0, 0, 0, 1),
     0px 0px 5px rgba(0, 0, 0, 1);
 }
-  
+
 .light-mode {
-    background-image: radial-gradient(circle at center, rgba(255, 255, 255, 1), rgba(200, 200, 200, 1));
-    color: rgb(0, 0, 0, 1);
-    text-shadow:
-    0px 0px 3px rgba(0, 0, 0, 1),
-    0px 0px 3px rgba(0, 0, 0, 1),
-    0px 0px 3px rgba(0, 0, 0, 1),
-    0px 0px 3px rgba(0, 0, 0, 1);
+  background-image: radial-gradient(
+    circle at center,
+    rgba(255, 255, 255, 1),
+    rgba(200, 200, 200, 1)
+  );
+  color: rgb(0, 0, 0, 1);
+  text-shadow: 0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1),
+    0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1);
 }
 
 #display {
-    font-size: 88px;
-    height: 124px;
-    justify-content: flex-end;
-    overflow: hidden;
-    text-align: right;
-    white-space: nowrap;
-    width: 512px;
+  font-size: 88px;
+  height: 124px;
+  justify-content: flex-end;
+  overflow: hidden;
+  text-align: right;
+  white-space: nowrap;
+  width: 512px;
 }
 
 .dark-mode #display {
-    border-color: rgba(0, 0, 0, 0.5);
-    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 1);
+  border-color: rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 1);
 }
 
 .light-mode #display {
-    border-color: rgba(128, 128, 128, 0.5);
-    box-shadow: inset 0px 0px 10px rgba(128, 128, 128, 1);
+  border-color: rgba(128, 128, 128, 0.5);
+  box-shadow: inset 0px 0px 10px rgba(128, 128, 128, 1);
 }
 
 #buttons {
-    flex-wrap: wrap;
-    gap: 10px;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 button {
-    border-color: rgba(128, 128, 128, 0.2);
-    border-radius: 10px;
-    border-style: solid;
-    border-width: 2px;
-    box-shadow: 0px 0px 3px rgba(0, 0, 0, 1),
-    0px 0px 3px rgba(0, 0, 0, 1),
-    0px 0px 3px rgba(0, 0, 0, 1),
-    0px 0px 3px rgba(0, 0, 0, 1),
-    inset 0px 0px 3px rgba(0, 0, 0, 0.5),
-    inset 0px 0px 3px rgba(0, 0, 0, 0.5);
-    cursor: pointer;
-    font-size: 25px;
-    font-weight: bolder;
-    height: 100px;
-    position: relative;
-    width: 100px;
-    z-index: 2;
+  border-color: rgba(128, 128, 128, 0.2);
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 2px;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1),
+    0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1),
+    inset 0px 0px 3px rgba(0, 0, 0, 0.5), inset 0px 0px 3px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  font-size: 25px;
+  font-weight: bolder;
+  height: 100px;
+  position: relative;
+  width: 100px;
+  z-index: 2;
 }
 
 button:active {
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 1),
-    0px 0px 4px rgba(0, 0, 0, 1),
-    0px 0px 4px rgba(0, 0, 0, 1),
-    0px 0px 4px rgba(0, 0, 0, 1),
-    inset 0px 0px 5px rgba(0, 0, 0, 1),
-    inset 0px 0px 5px rgba(0, 0, 0, 1);
-    transform: translateY(2px);
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 1), 0px 0px 4px rgba(0, 0, 0, 1),
+    0px 0px 4px rgba(0, 0, 0, 1), 0px 0px 4px rgba(0, 0, 0, 1),
+    inset 0px 0px 5px rgba(0, 0, 0, 1), inset 0px 0px 5px rgba(0, 0, 0, 1);
+  transform: translateY(2px);
 }
 
 .function-buttons {
-    background: radial-gradient(circle, rgba(200, 255, 200, 1) 0%, rgba(150, 255, 150, 1) 125%);
+  background: radial-gradient(
+    circle,
+    rgba(200, 255, 200, 1) 0%,
+    rgba(150, 255, 150, 1) 125%
+  );
 }
 
 .function-buttons,
@@ -206,71 +201,92 @@ button:active {
 .operator-buttons,
 .modifier-buttons,
 .answer-buttons {
-    color: rgba(0, 0, 0, 1);
-    text-shadow: 0px 0px 3px rgba(0, 0, 0, 1),
-    0px 0px 3px rgba(0, 0, 0, 1),
-    0px 0px 3px rgba(0, 0, 0, 1),
-    0px 0px 3px rgba(0, 0, 0, 1),
-    0px 0px 3px rgba(0, 0, 0, 1),
-    0px 0px 3px rgba(0, 0, 0, 1),
+  color: rgba(0, 0, 0, 1);
+  text-shadow: 0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1),
+    0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1),
+    0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1),
     0px 0px 3px rgba(0, 0, 0, 1);
 }
 
 #colour-button {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 #power-button,
 .rescind-buttons,
 #answer-button {
-    font-size: 42px;
+  font-size: 42px;
 }
 
 .power-button-on {
-    background-image: radial-gradient(circle at center, rgba(0, 255, 0, 1), rgba(0, 16, 0, 1));
+  background-image: radial-gradient(
+    circle at center,
+    rgba(0, 255, 0, 1),
+    rgba(0, 16, 0, 1)
+  );
 }
 
 .power-button-off {
-    background-image: radial-gradient(circle at center, rgba(255, 0, 0, 1), rgba(16, 0, 0, 1));
+  background-image: radial-gradient(
+    circle at center,
+    rgba(255, 0, 0, 1),
+    rgba(16, 0, 0, 1)
+  );
 }
 
 .rescind-buttons {
-    background: radial-gradient(circle, rgba(255, 200, 0, 1) 0%, rgba(255, 160, 0, 1) 125%);
+  background: radial-gradient(
+    circle,
+    rgba(255, 200, 0, 1) 0%,
+    rgba(255, 160, 0, 1) 125%
+  );
 }
 
 .operator-buttons {
-    background: radial-gradient(circle, rgba(140, 140, 255, 1) 0%, rgba(70, 0, 255, 1) 125%);
+  background: radial-gradient(
+    circle,
+    rgba(140, 140, 255, 1) 0%,
+    rgba(70, 0, 255, 1) 125%
+  );
 }
 
 .operator-buttons,
 #equals-button,
 #decimal-point-button {
-    font-size: 90px;
+  font-size: 90px;
 }
 
 .modifier-buttons {
-    background: radial-gradient(circle, rgba(255, 120, 120, 1) 0%, rgba(255, 90, 90, 1) 125%);
-    font-size: 62px;
+  background: radial-gradient(
+    circle,
+    rgba(255, 120, 120, 1) 0%,
+    rgba(255, 90, 90, 1) 125%
+  );
+  font-size: 62px;
 }
 
 .answer-buttons {
-    background: radial-gradient(circle, rgba(120, 120, 255, 1) 0%, rgba(90, 90, 255, 1) 125%);
+  background: radial-gradient(
+    circle,
+    rgba(120, 120, 255, 1) 0%,
+    rgba(90, 90, 255, 1) 125%
+  );
 }
 
 footer {
-    bottom: 0;
-    left: 0;
-    position: fixed;
-    justify-content: flex-end;
-    width: 100%;
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  justify-content: flex-end;
+  width: 100%;
 }
-  
+
 #github-logo {
-    filter: invert(3%);
-    height: 33px;
-    padding-bottom: 16px;
-    padding-left: 0px;
-    padding-right: 16px;
-    padding-top: 0px;
-    width: 32px;
+  filter: invert(3%);
+  height: 33px;
+  padding-bottom: 16px;
+  padding-left: 0px;
+  padding-right: 16px;
+  padding-top: 0px;
+  width: 32px;
 }
