--- a/styles.css
+++ b/styles.css
@@ -125,12 +125,17 @@ button {
     rgba(0, 0, 0, 1)
   );
   text-shadow: 0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 3px rgba(255, 255, 255, 1), 0px 0px 3px rgba(255, 255, 255, 1),
-    0px 0px 3px rgba(255, 255, 255, 1), 0px 0px 5px rgba(0, 0, 0, 1),
-    0px 0px 5px rgba(0, 0, 0, 1), 0px 0px 5px rgba(0, 0, 0, 1),
-    0px 0px 5px rgba(0, 0, 0, 1), 0px 0px 5px rgba(0, 0, 0, 1),
-    0px 0px 5px rgba(0, 0, 0, 1), 0px 0px 5px rgba(0, 0, 0, 1),
-    0px 0px 5px rgba(0, 0, 0, 1);
+  0px 0px 3px rgba(255, 255, 255, 1),
+  0px 0px 3px rgba(255, 255, 255, 1),
+  0px 0px 3px rgba(255, 255, 255, 1),
+  0px 0px 5px rgba(0, 0, 0, 1),
+  0px 0px 5px rgba(0, 0, 0, 1),
+  0px 0px 5px rgba(0, 0, 0, 1),
+  0px 0px 5px rgba(0, 0, 0, 1),
+  0px 0px 5px rgba(0, 0, 0, 1),
+  0px 0px 5px rgba(0, 0, 0, 1),
+  0px 0px 5px rgba(0, 0, 0, 1),
+  0px 0px 5px rgba(0, 0, 0, 1);
 }
 
 .light-mode {
@@ -140,8 +145,10 @@ button {
     rgba(200, 200, 200, 1)
   );
   color: rgb(0, 0, 0, 1);
-  text-shadow: 0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1),
-    0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1);
+  text-shadow: 0px 0px 3px rgba(0, 0, 0, 1),
+  0px 0px 3px rgba(0, 0, 0, 1),
+  0px 0px 3px rgba(0, 0, 0, 1), 
+  px 0px 3px rgba(0, 0, 0, 1);
 }
 
 #display {
@@ -174,9 +181,12 @@ button {
   border-radius: 10px;
   border-style: solid;
   border-width: 2px;
-  box-shadow: 0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1),
-    0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1),
-    inset 0px 0px 3px rgba(0, 0, 0, 0.5), inset 0px 0px 3px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 1),
+  0px 0px 3px rgba(0, 0, 0, 1),
+  0px 0px 3px rgba(0, 0, 0, 1),
+  0px 0px 3px rgba(0, 0, 0, 1),
+  inset 0px 0px 3px rgba(0, 0, 0, 0.5),
+  inset 0px 0px 3px rgba(0, 0, 0, 0.5);
   cursor: pointer;
   font-size: 25px;
   font-weight: bolder;
@@ -187,9 +197,12 @@ button {
 }
 
 button:active {
-  box-shadow: 0px 0px 4px rgba(0, 0, 0, 1), 0px 0px 4px rgba(0, 0, 0, 1),
-    0px 0px 4px rgba(0, 0, 0, 1), 0px 0px 4px rgba(0, 0, 0, 1),
-    inset 0px 0px 5px rgba(0, 0, 0, 1), inset 0px 0px 5px rgba(0, 0, 0, 1);
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 1),
+  0px 0px 4px rgba(0, 0, 0, 1),
+  0px 0px 4px rgba(0, 0, 0, 1),
+  0px 0px 4px rgba(0, 0, 0, 1),
+  inset 0px 0px 5px rgba(0, 0, 0, 1),
+  inset 0px 0px 5px rgba(0, 0, 0, 1);
   transform: translateY(2px);
 }
 
@@ -208,10 +221,13 @@ button:active {
 .modifier-buttons,
 .answer-buttons {
   color: rgba(0, 0, 0, 1);
-  text-shadow: 0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1),
-    0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1),
-    0px 0px 3px rgba(0, 0, 0, 1), 0px 0px 3px rgba(0, 0, 0, 1),
-    0px 0px 3px rgba(0, 0, 0, 1);
+  text-shadow: 0px 0px 3px rgba(0, 0, 0, 1),
+  0px 0px 3px rgba(0, 0, 0, 1),
+  0px 0px 3px rgba(0, 0, 0, 1),
+  0px 0px 3px rgba(0, 0, 0, 1),
+  0px 0px 3px rgba(0, 0, 0, 1),
+  0px 0px 3px rgba(0, 0, 0, 1),
+  0px 0px 3px rgba(0, 0, 0, 1);
 }
 
 #colour-button {
