--- a/styles.css
+++ b/styles.css
@@ -144,11 +144,11 @@ button {
     rgba(255, 255, 255, 1),
     rgba(200, 200, 200, 1)
   );
-  color: rgb(0, 0, 0, 1);
+  color: rgba(0, 0, 0, 1);
   text-shadow: 0px 0px 3px rgba(0, 0, 0, 1),
   0px 0px 3px rgba(0, 0, 0, 1),
-  0px 0px 3px rgba(0, 0, 0, 1), 
-  px 0px 3px rgba(0, 0, 0, 1);
+  0px 0px 3px rgba(0, 0, 0, 1),
+  0px 0px 3px rgba(0, 0, 0, 1);
 }
 
 #display {
