--- a/styles.css
+++ b/styles.css
@@ -290,11 +290,12 @@ footer {
 }
 
 #github-logo {
-  filter: invert(3%);
-  height: 24px;
+  fill: rgba(255, 255, 255, 1);
+  height: 24.5px;
+  opacity: 7.5%;
   padding-bottom: 6px;
   padding-left: 0px;
   padding-right: 6px;
   padding-top: 0px;
-  width: 24.5px;
+  width: 24px;
 }
